<resources>
    <string name="app_name">Picture This</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_received">View Response</string>
    <string name="title_activity_sent">Send a Response</string>
    <string name="title_activity_test_parcel">TestParcel</string>
    <string name="title_activity_google_plus_base">GooglePlusBaseActivity</string>
    <string name="title_activity_login">Login</string>
    <string name="play_services_error">Error in play services</string>
    <string name="close">close</string>
    <string name="configuration_error">Configuration Error!!!</string>
    <string name="title_activity_create_challenge">Create New Challenge</string>
    <string name="sign_in_failed">Failed to sign in. Please check your network connection and try again.</string>
    <string name="app_misconfigured">The application is incorrectly configured. Check that the package name and signing certificate match the client ID created in Developer Console. Also, if the application is not yet published, check that the account you are trying to sign in with is listed as a tester account. See logs for more information.</string>
    <string name="license_failed">License check failed.</string>
    <string name="unknown_error">Unknown error.</string>
    <string name="view_achievements">View Achievements</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="title_activity_ihate_this">IHateThisActivity</string>
    <string name="title_section1">Received</string>
    <string name="title_section2">Sent</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="title_activity_test_material_drawer">TestMaterialDrawer</string>
    <string name="title_activity_test_material">TestMaterialActivity</string>
    <string name="logout">Log Out</string>
    <string name="sign_out">Sign Out</string>
    <string name="title">Title</string>
    <string name="location">Location</string>
    <string name="view_map">View Map</string>
    <string name="users">Users</string>
    <string name="select">Select</string>
    <string name="send_challenge">Send Challenge</string>
    <string name="enable_network_location">Please enable network location services in order to create a new challenge.</string>
    <string name="enable_location_providers">Please enable location service providers to see your location on the map.</string>
    <string name="change_settings">Change Settings</string>
    <string name="cancel">Cancel</string>
    <string name="challenge_created">Challenge created</string>
    <string name="response_created">Response created</string>
    <string name="picture_missing">Picture is missing</string>
    <string name="challenged_missing">Challenged user(s) missing</string>
    <string name="location_missing">Location is missing</string>
    <string name="title_missing">Title is missing</string>
    <string name="title_activity_challenge_feed">Current Challenges</string>
    <string name="title_activity_map">Map</string>
    <string name="marker">Marker</string>
    <string name="title_activity_history">History</string>
    <string name="menu_add_item">Menu add item</string>
    <string name="title_activity_view_challenge">ViewChallengeActivity</string>
    <string name="title_activity_test_feed">Test Challenges</string>
    <string name="response_accepted">Response accepted</string>
    <string name="response_declined">Response declined</string>
    <string name="challenge_closed">Challenge closed</string>
    <string name="user_list_empty">Invite your Google+ friends to play Picture This.</string>
    <string name="tagline">Find the spot. Take a shot.</string>
    <string name="no_challenges">No challenges to display</string>
    <string name="challenge">Challenge</string>
    <string name="my_response">My Response</string>
    <string name="challenger">Challenger</string>
    <string name="date">Date</string>
    <string name="status">Status</string>
    <string name="locatin_text">Location</string>
    <string name="view_location">View Map</string>
    <string name="multiplayer_text">Multiplayer</string>
    <string name="send_response">Send Response</string>
    <string name="my_challenge">My Challenge</string>
    <string name="response">Response</string>
    <string name="responder">Responder</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="error_no_internet">You are not connected to the internet. Please connect and try again.</string>
    <string name="ok">OK</string>
    <string name="status_winner">winner</string>
    <string name="status_loser">loser</string>
    <string name="title_activity_large_picture">View Large Picture</string>
    <string name="type">Type</string>

</resources>
