<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/scrollView">
    <RelativeLayout android:layout_width="match_parent"
        android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context="com.example.janrodriguez.picturethis.Activities.ViewResponseActivity">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Title"
            android:id="@+id/challenge_title"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="false"
            android:layout_centerHorizontal="true" />

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/table1"
            android:orientation="horizontal"
            android:stretchColumns="2"
            android:showDividers="beginning|middle|end"
            android:layout_below="@+id/challenge_title"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="15dp">

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:textAlignment="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/challenge"
                    android:id="@+id/textView2"
                    android:singleLine="true"
                    android:layout_gravity="center_horizontal" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/my_response"
                    android:id="@+id/textView3"
                    android:layout_column="23"
                    android:singleLine="true"
                    android:layout_gravity="center_horizontal" />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="horizontal"
                android:id="@+id/tablerow1">

                <ImageButton
                    android:layout_width="150dp"
                    android:layout_height="200dp"
                    android:id="@+id/challenge_picture"
                    android:layout_column="0"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/no_pic" />

                <ImageButton
                    android:layout_width="150dp"
                    android:layout_height="200dp"
                    android:id="@+id/response_picture"
                    android:layout_column="23"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/no_pic" />
            </TableRow>

        </TableLayout>

        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/table2"
            android:stretchColumns="2"
            android:touchscreenBlocksFocus="true"
            android:layout_marginTop="15dp"
            android:layout_below="@+id/table1"
            android:layout_alignParentLeft="true">

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/challenger"
                    android:textStyle="bold"
                    android:id="@+id/textView4" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:id="@+id/challenger_name"
                    android:layout_column="1" />

            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="horizontal"
                android:id="@+id/tablerow2">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textStyle="bold"
                    android:text="@string/date"
                    android:id="@+id/textView" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:id="@+id/challenge_date"
                    android:layout_column="1" />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textStyle="bold"
                    android:text="@string/status"
                    android:id="@+id/textView5"
                    android:layout_column="0" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:id="@+id/status_text"
                    android:layout_column="1" />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="horizontal"
                android:id="@+id/tablerow3">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textStyle="bold"
                    android:text="@string/locatin_text"
                    android:id="@+id/textView6"
                    android:layout_column="0" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/view_location"
                    android:id="@+id/view_map_button"
                    android:layout_column="1"
                    android:textSize="12dp" />

            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="horizontal"
                android:id="@+id/tablerow4">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textStyle="bold"
                    android:text="@string/multiplayer_text"
                    android:id="@+id/textView7"
                    android:layout_column="0"
                    android:layout_gravity="center_vertical" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/multiplayer_icon"
                    android:layout_gravity="center_vertical"
                    android:focusableInTouchMode="false" />

            </TableRow>
        </TableLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send_response"
            android:id="@+id/sendResponse_button"
            android:layout_below="@+id/table2"
            android:layout_centerHorizontal="true"
            android:visibility="gone" />
    </RelativeLayout>
</ScrollView>