<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/scrollView">
    <RelativeLayout android:layout_width="match_parent"
        android:layout_height="wrap_content" android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context="com.example.janrodriguez.picturethis.Activities.ViewChallengeActivity">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/title"
            android:id="@+id/challenge_title"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="false"
            android:layout_centerHorizontal="true" />

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/table1"
            android:orientation="horizontal"
            android:stretchColumns="*"
            android:layout_below="@+id/challenge_title"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="15dp"
            android:gravity="center_horizontal">

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:textAlignment="center"
                android:gravity="center_horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/challenge"
                    android:id="@+id/textView2"
                    android:singleLine="true"
                    android:layout_gravity="center_horizontal" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/response"
                    android:id="@+id/textView3"
                    android:singleLine="true"
                    android:layout_gravity="center_horizontal" />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="horizontal"
                android:id="@+id/tablerow1"
                android:gravity="center_horizontal">

                <ViewSwitcher
                    android:id="@+id/challenge_switcher"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent">

                    <RelativeLayout
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent" >

                        <ProgressBar
                            android:id="@+id/challenge_progressbar"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:layout_centerVertical="true" />

                    </RelativeLayout>

                    <ImageButton
                        android:layout_width="150dp"
                        android:layout_height="200dp"
                        android:id="@+id/challenge_picture"
                        android:src="@drawable/no_pic"
                        android:scaleType="centerInside"
                        android:padding="0dp"
                        android:background="@null" />
                </ViewSwitcher>
                <ViewSwitcher
                    android:id="@+id/response_switcher"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent">

                    <RelativeLayout
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent" >

                        <ProgressBar
                            android:id="@+id/response_progressbar"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:layout_centerVertical="true" />

                    </RelativeLayout>

                    <ImageButton
                        android:layout_width="150dp"
                        android:layout_height="200dp"
                        android:id="@+id/response_picture"
                        android:layout_column="23"
                        android:src="@drawable/no_pic"
                        android:scaleType="centerInside"
                        android:padding="0dp"
                        android:background="@null" />
                </ViewSwitcher>
            </TableRow>

        </TableLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/table2"
            android:stretchColumns="2"
            android:touchscreenBlocksFocus="true"
            android:layout_marginTop="15dp"
            android:layout_below="@+id/table1"
            android:layout_alignParentLeft="true">

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textStyle="bold"
                    android:text="@string/responder"
                    android:id="@+id/textView4" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:id="@+id/responder_name"
                    android:layout_column="1"
                    android:layout_marginLeft="10dp" />

            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="horizontal"
                android:id="@+id/tablerow2">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textStyle="bold"
                    android:text="@string/date"
                    android:id="@+id/textView" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:id="@+id/challenge_date"
                    android:layout_column="1"
                    android:layout_marginLeft="10dp" />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="horizontal"
                android:id="@+id/tablerow3">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textStyle="bold"
                    android:text="@string/location"
                    android:id="@+id/textView6"
                    android:layout_column="0" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/view_map"
                    android:id="@+id/view_map_button"
                    android:layout_column="1"
                    android:textSize="12sp"
                    android:background="@color/primary_dark"/>

            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="horizontal"
                android:id="@+id/tablerow4">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textStyle="bold"
                    android:text="@string/multiplayer_text"
                    android:id="@+id/textView7"
                    android:layout_column="0"
                    android:layout_gravity="center_vertical" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/multiplayer_icon"
                    android:layout_gravity="center_vertical" />

            </TableRow>
        </TableLayout>

        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/table2"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp">

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="center_horizontal">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/accept"
                    android:id="@+id/accept_button"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:background="@color/accent"
                    android:visibility="gone"
                    android:layout_marginRight="5dp"
                    android:textColor="@color/primary_text" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/decline"
                    android:id="@+id/decline_button"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:background="@color/accent"
                    android:layout_column="1"
                    android:visibility="gone"
                    android:layout_marginLeft="5dp"
                    android:textColor="@color/primary_text" />
            </TableRow>
        </TableLayout>

    </RelativeLayout>
</ScrollView>